--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,5 +11,5 @@
     <string name="hello_world">Hello world!</string>
     
     <string name="open_folder">Open this folder</string>
-
+	<string name="cancel">Cancel</string>
 </resources>
