Implemented fragments for the start page and level page. Done whatever I could to preserve states between changing fragments.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,4 +14,7 @@
     
     <string name="open_folder">Open this folder</string>
 	<string name="cancel">Cancel</string>
+	
+	<string name="tab_start">Start</string>
+	<string name="tab_level">Level</string>
 </resources>
