--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,5 @@
 	<string name="contentdesc_close_level_drawer">Hide tile menu</string>
 
     <string name="welcome">Welcome to the Wolfenstein 3D Editor. Open a level set to get started.</string>
-    <string name="open_levels">Open Levels&#8230;</string>
+    <string name="open_levels">Open Levels</string>
 </resources>
