* Moved some global data to the activity, wherever it depends on a context
* Fragment pushing and popping
* Confirmation alert for exiting app or closing document

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,11 @@
 
     <string name="welcome">Welcome to the Wolfenstein 3D Editor. Open a level set to get started.</string>
     <string name="open_levels">Open Levels</string>
+
+    <string name="yes">Yes</string>
+
+    <string name="exit">Exit</string>
+    <string name="do_not_exit">Don\'t Exit</string>
+    <string name="exit_question">Exit the Wolfenstein Editor?</string>
+    <string name="dismiss">Dismiss</string>
 </resources>
