* Now the left drawer's open/closed state is saved between rotations
* Fix LevelFragment state arg names
* Deleted obsolete resources
* Started a drawer menu at the left of the tile selector

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,8 @@
 
     <string name="yes">Yes</string>
 
+    <string name="icon">Icon</string>
+
     <string name="exit">Exit</string>
     <string name="do_not_exit">Don\'t Exit</string>
     <string name="exit_question">Exit the Wolfenstein Editor?</string>
