* Undo operations now get autosaved
* Don't autoload if mPath is empty
* Autosaving now deletes all 'autosave' folder in case of error

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,7 @@
     <string name="checking_for_files">Checking for files&#8230;</string>
     <string name="loading_vswap_file">Loading VSWAP file&#8230;</string>
     <string name="loading_maphead_gamemaps">Loading MAPHEAD and GAMEMAPS files&#8230;</string>
+    <string name="loading_current_state">Loading current state&#8230;</string>
 
     <string name="autosaving">Autosaving&#8230;</string>
     <string name="saving_vswap_file">Saving VSWAP file&#8230;</string>
